--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       font-family: Arial, sans-serif;
-      background: aqua;
+      background: #4ECDC4;
       border: show;
       display: flex;
       justify-content: center;
@@ -23,7 +23,7 @@
 
     #app {
       width: 100%;
-      max-width: 400px;
+      max-width: 500px;
       color: #4ECDC4;
       border: show;
       height: 100%;
